--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -29,7 +29,7 @@
   </parent>
 
   <dependencies>
-    <!-- lichkin ui -->
+    <!-- lichkin-ui dependency webjars -->
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
@@ -44,6 +44,12 @@
       <groupId>org.webjars</groupId>
       <artifactId>Semantic-UI</artifactId>
       <version>2.3.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>webjars-locator</artifactId>
+      <version>0.34</version>
     </dependency>
   </dependencies>
 
