--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -45,6 +45,11 @@
       <artifactId>Semantic-UI</artifactId>
       <version>2.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>font-awesome</artifactId>
+      <version>5.0.10</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
     <dependency>
       <groupId>org.webjars</groupId>
