--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -4,6 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <packaging>jar</packaging>
 
+  <groupId>com.lichkin.ui</groupId>
   <artifactId>lichkin-ui</artifactId>
   <version>1.0.0.RELEASE</version>
 
@@ -21,12 +22,12 @@
     </developer>
   </developers>
 
-  <parent>
-    <groupId>com.lichkin.ui</groupId>
-    <artifactId>lichkin-ui-parent</artifactId>
-    <version>1.0.0.RELEASE</version>
-    <relativePath>../lichkin-ui-parent</relativePath>
-  </parent>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <!-- lichkin-ui dependency webjars -->
