--- a/lichkin-ueditor/pom.xml
+++ b/lichkin-ueditor/pom.xml
@@ -8,6 +8,12 @@
   <artifactId>lichkin-ueditor</artifactId>
   <version>1.0.0.RELEASE</version>
 
+  <parent>
+    <groupId>com.lichkin.springframework.boot</groupId>
+    <artifactId>lichkin-spring-boot</artifactId>
+    <version>1.0.0.RELEASE</version>
+  </parent>
+
   <name>lichkin-ueditor</name>
   <description>将UEditor转为webjars</description>
   <url>http://codes.lichkin.com/lichkin-ueditor</url>
@@ -28,5 +34,13 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
+  <dependencies>
+    <!-- lichkin starter -->
+    <dependency>
+      <groupId>com.lichkin.springframework.boot</groupId>
+      <artifactId>lichkin-spring-boot-starter-web</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
