--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>font-awesome</artifactId>
       <version>5.0.13</version>
     </dependency>
+    <dependency>
+      <groupId>com.lichkin.ui</groupId>
+      <artifactId>lichkin-ueditor</artifactId>
+      <version>1.0.0.RELEASE</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
     <dependency>
       <groupId>org.webjars</groupId>
