--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>spark-md5</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.lichkin.ui</groupId>
+      <artifactId>lichkin-cropper</artifactId>
+      <version>1.0.0.RELEASE</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
     <dependency>
       <groupId>org.webjars</groupId>
