pom compress 配置

--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -119,17 +119,72 @@
               <insertNewLine>true</insertNewLine>
               <insertFileHeader>true</insertFileHeader>
               <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.css</output>
+              <includes>
+                <include>lichkin-plugin-icon.css</include>
+                <include>lichkin-plugin-text.css</include>
+                <include>lichkin-plugin-button.css</include>
+                <include>lichkin-plugin-textbox.css</include>
+              </includes>
+            </aggregation>
+            <aggregation>
+              <insertNewLine>true</insertNewLine>
+              <insertFileHeader>true</insertFileHeader>
+              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.js</output>
+              <includes>
+                <include>lichkin-plugin-core.js</include>
+                <include>lichkin-plugin-icon.js</include>
+                <include>lichkin-plugin-text.js</include>
+                <include>lichkin-plugin-button.js</include>
+                <include>lichkin-plugin-textbox.js</include>
+              </includes>
+            </aggregation>
+            <aggregation>
+              <insertNewLine>true</insertNewLine>
+              <insertFileHeader>true</insertFileHeader>
+              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins.css</output>
+              <includes>
+                <include>lichkin-plugin-icon.css</include>
+                <include>lichkin-plugin-text.css</include>
+                <include>lichkin-plugin-button.css</include>
+                <include>lichkin-plugin-textbox.css</include>
+                <include>lichkin-plugin-droplist.css</include>
+                <include>lichkin-plugin-ueditor.css</include>
+                <include>lichkin-plugin-datepicker.css</include>
+                <include>lichkin-plugin-timepicker.css</include>
+                <include>lichkin-plugin-numberspinner.css</include>
+                <include>lichkin-plugin-tree.css</include>
+                <include>lichkin-plugin-cropper.css</include>
+                <include>lichkin-plugin-form.css</include>
+                <include>lichkin-plugin-datagrid.css</include>
+                <include>lichkin-plugin-dialog.css</include>
+                <include>lichkin-plugin-selector.css</include>
+              </includes>
+            </aggregation>
+            <aggregation>
+              <insertNewLine>true</insertNewLine>
+              <insertFileHeader>true</insertFileHeader>
+              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
               <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins.js</output>
               <includes>
                 <include>lichkin-plugin-core.js</include>
                 <include>lichkin-plugin-icon.js</include>
                 <include>lichkin-plugin-text.js</include>
                 <include>lichkin-plugin-button.js</include>
-                <include>lichkin-plugin-dialog.js</include>
                 <include>lichkin-plugin-textbox.js</include>
                 <include>lichkin-plugin-droplist.js</include>
+                <include>lichkin-plugin-ueditor.js</include>
+                <include>lichkin-plugin-datepicker.js</include>
+                <include>lichkin-plugin-timepicker.js</include>
+                <include>lichkin-plugin-numberspinner.js</include>
                 <include>lichkin-plugin-tree.js</include>
+                <include>lichkin-plugin-cropper.js</include>
+                <include>lichkin-plugin-form.js</include>
                 <include>lichkin-plugin-datagrid.js</include>
+                <include>lichkin-plugin-dialog.js</include>
+                <include>lichkin-plugin-selector.js</include>
               </includes>
             </aggregation>
           </aggregations>
