--- a/lichkin-ui-admin-login-1/pom.xml
+++ b/lichkin-ui-admin-login-1/pom.xml
@@ -23,4 +23,32 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <!-- https://mvnrepository.com/artifact/net.alchim31.maven/yuicompressor-maven-plugin -->
+      <plugin>
+        <groupId>net.alchim31.maven</groupId>
+        <artifactId>yuicompressor-maven-plugin</artifactId>
+        <version>1.5.1</version>
+        <executions>
+          <execution>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>compress</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includes>
+            <include>**/*.js</include>
+            <include>**/*.css</include>
+          </includes>
+          <encoding>UTF-8</encoding>
+          <jswarn>false</jswarn>
+          <suffix>.min</suffix>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
