--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -110,16 +110,23 @@
             <include>**/*.js</include>
             <include>**/*.css</include>
           </includes>
+          <excludes>
+            <exclude>**/*.min.js</exclude>
+            <exclude>**/*.min.css</exclude>
+            <exclude>**/demo/*.js</exclude>
+            <exclude>**/demo/**/*.js</exclude>
+          </excludes>
           <encoding>UTF-8</encoding>
           <jswarn>false</jswarn>
           <suffix>.min</suffix>
           <preProcessAggregates>true</preProcessAggregates>
+          <useProcessedResources>true</useProcessedResources>
           <aggregations>
             <aggregation>
               <insertNewLine>true</insertNewLine>
               <insertFileHeader>true</insertFileHeader>
-              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
-              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.css</output>
+              <inputDir>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.css</output>
               <includes>
                 <include>lichkin-plugin-icon.css</include>
                 <include>lichkin-plugin-text.css</include>
@@ -130,8 +137,8 @@
             <aggregation>
               <insertNewLine>true</insertNewLine>
               <insertFileHeader>true</insertFileHeader>
-              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
-              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.js</output>
+              <inputDir>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-simple.js</output>
               <includes>
                 <include>lichkin-plugin-core.js</include>
                 <include>lichkin-plugin-icon.js</include>
@@ -143,13 +150,9 @@
             <aggregation>
               <insertNewLine>true</insertNewLine>
               <insertFileHeader>true</insertFileHeader>
-              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
-              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins.css</output>
+              <inputDir>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-complex.css</output>
               <includes>
-                <include>lichkin-plugin-icon.css</include>
-                <include>lichkin-plugin-text.css</include>
-                <include>lichkin-plugin-button.css</include>
-                <include>lichkin-plugin-textbox.css</include>
                 <include>lichkin-plugin-droplist.css</include>
                 <include>lichkin-plugin-ueditor.css</include>
                 <include>lichkin-plugin-datepicker.css</include>
@@ -166,14 +169,9 @@
             <aggregation>
               <insertNewLine>true</insertNewLine>
               <insertFileHeader>true</insertFileHeader>
-              <inputDir>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
-              <output>${basedir}/target/classes/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins.js</output>
+              <inputDir>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins</inputDir>
+              <output>${basedir}/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugins-complex.js</output>
               <includes>
-                <include>lichkin-plugin-core.js</include>
-                <include>lichkin-plugin-icon.js</include>
-                <include>lichkin-plugin-text.js</include>
-                <include>lichkin-plugin-button.js</include>
-                <include>lichkin-plugin-textbox.js</include>
                 <include>lichkin-plugin-droplist.js</include>
                 <include>lichkin-plugin-ueditor.js</include>
                 <include>lichkin-plugin-datepicker.js</include>
@@ -185,6 +183,7 @@
                 <include>lichkin-plugin-datagrid.js</include>
                 <include>lichkin-plugin-dialog.js</include>
                 <include>lichkin-plugin-selector.js</include>
+                <include>lichkin-plugin-selector-employee.js</include>
               </includes>
             </aggregation>
           </aggregations>
