--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.lichkin.ui</groupId>
   <artifactId>lichkin-ui</artifactId>
-  <version>1.1.2.RELEASE</version>
+  <version>1.1.3.RELEASE</version>
 
   <parent>
     <groupId>com.lichkin.springframework.boot</groupId>
@@ -184,6 +184,7 @@
                 <include>lichkin-plugin-cropper.js</include>
                 <include>lichkin-plugin-selector.js</include>
                 <include>lichkin-plugin-selector-employee.js</include>
+                <include>lichkin-plugin-selector-product.js</include>
               </includes>
             </aggregation>
           </aggregations>
