--- a/lichkin-ui/pom.xml
+++ b/lichkin-ui/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>lichkin-ueditor</artifactId>
       <version>1.1.6.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.lichkin.ui</groupId>
+      <artifactId>lichkin-echarts</artifactId>
+      <version>1.0.0.RELEASE</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
     <dependency>
       <groupId>org.webjars</groupId>
